--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <div class="container">
-            <img src="images/image-qr-code.png" />
+            <img src="images/image-qr-code.png" alt="A qrcode linking to FrontEnd Master"/>
             <div class="text">
                 <h1 class="text-preset-1">
                     Improve your front-end skills by building projects
