--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <main>
         <div class="container">
             <img src="images/image-qr-code.png" alt="A qrcode linking to FrontEnd Master"/>
-            <div class="text">
-                <h1 class="text-preset-1">
+            <div class="container__content">
+                <h1>
                     Improve your front-end skills by building projects
                 </h1>
-                <p class="text-preset-2">
+                <p>
                     Scan the QR code to visit Frontend Mentor and take your coding
                     skills to the next level
                 </p>
